# mortgageboss-ai

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  decisions.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260610_1809_f0934055772d_enable_postgres_extensions.py  20260610_2210_ee69a4f40e63_create_companies.py  20260610_2218_e5d215445535_create_users.py  20260610_2236_f9ed4a63a97e_create_lenders.py  20260610_2300_97f1d55c56ee_create_loan_files.py  20260610_2342_82c2b1989cce_create_borrowers_and_properties.py  20260611_0850_a513e98e399f_create_documents.py  20260611_0911_aa3e537ea73f_create_extractions.py  20260611_0932_2b2266d15127_create_findings.py  20260611_0949_69fb46c9cc5b_create_verifications_and_link_findings.py  20260611_1003_4db01a03523e_create_needs_items.py  20260611_1022_bf89fba42bdc_create_communications_and_activity_logs.py  20260611_1743_4a94a45455de_add_file_updated_and_file_deleted_.py  20260612_1231_8a153b35129b_add_document_type_overridden_activity_.py  20260612_2224_2680568f49c9_lp_52_stated_financials_models_and_.py  20260618_1000_f1ed01fc2713_lp_58_add_document_tier.py  20260619_1000_b344317498a5_lp_65_add_document_summary.py  20260619_1400_73cb809cbd56_lp_66_document_findings_and_generic_analysis.py  20260619_1600_93a861456e2f_lp_68_needs_engine.py  20260619_1730_a7f4c2e1b9d0_lp_70_needs_disposition_activity_types.py  20260624_1015_c3e8a1f49b27_lp_71_5_loan_file_ai_needs_status.py  20260625_0900_d4b18c7af3e2_lp_71_document_versioning_staleness.py  20260625_0905_e7c2f9a14b60_lp_71_document_activity_types.py  20260627_1000_f4a9c1e7b203_lp_74_finding_origin.py  20260627_1130_b8d3f06a1c54_lp_75_finding_verification_dimensions.py  20260628_0930_c1f7a4e9d250_lp_76_dti_overrides.py  20260628_1500_d2a8b6f10e93_lp_77_ltv_calculator.py  20260628_1700_b7f2c1d4e890_lp_79_aggression_dial.py  20260628_1700_e3b9c2d4a187_lp_78_verification_stale.py  20260629_1000_a1c4e7b9f320_lp_78_1_verification_input_fingerprint.py  20260629_1600_e3c9a1f5b2d7_lp_87_calculator_overrides.py  20260629_2100_f4d1a7c0e2b9_lp_89_validation_verdicts.py  20260701_1200_a2f5c8d1e4b6_lp_98_finding_undone_activity_type.py
backend/app/: main.py
backend/app/ai/: classification.py  classification_prompt.py  client.py  cost.py  cross_source.py  generic_analyzer.py  parsing.py  prompt_loader.py  summarization.py
backend/app/api/: activity.py  auth.py  borrowers.py  calculators.py  dependencies.py  dev.py  document_findings.py  documents.py  dti.py  lenders.py  loan_files.py  ltv.py  needs.py  overlay_admin.py  preferences.py  property.py  stated_financials.py  validation_aid.py  verification.py
backend/app/core/: config.py  database.py  encryption.py  errors.py  jwt.py  logging.py  redis.py  security.py
backend/app/documents/: __init__.py  catalog.py  naming.py  staleness.py
backend/app/mismo/: import_service.py  parser.py  schema.py
backend/app/models/: __init__.py  activity_log.py  base.py  borrower.py  calculator_override.py  communication.py  company.py  document.py  document_finding.py  dti_override.py  encrypted_types.py  enums.py  extraction.py  finding.py  helpers.py  lender.py  loan_file.py  ltv_override.py  mismo_import.py  needs_item.py  property.py  stated_financials.py  types.py  user.py  validation_verdict.py  verification.py
backend/app/schemas/: activity.py  auth.py  borrower.py  calculators.py  document.py  document_finding.py  dti.py  finding_impact.py  lender.py  loan_file.py  ltv.py  mismo.py  needs_item.py  overlay_admin.py  preferences.py  property.py  stated_financials.py  validation_aid.py  verification.py
backend/app/scripts/: generate_finding_guidance.py  seed_dev.py  seed_dev_data.py
backend/app/services/: activity_log.py  aggression.py  auth.py  borrowers.py  calculators.py  communications.py  cross_source.py  cross_source_deterministic.py  document_findings.py  document_versioning.py  documents.py  dti.py  extractions.py  finding_blocking.py  finding_identity.py  finding_impact.py  finding_reconcile.py  finding_resolution.py  findings.py  implications.py  lenders.py  loan_file_ids.py  loan_files.py  ltv.py  mi.py  needs_ai.py  needs_engine.py  needs_items.py  needs_templates.py  overlay_admin.py  pdf_utils.py  properties.py  stated_financials.py  validation_aid.py  verification_engine.py  verifications.py
backend/app/storage/: __init__.py  base.py  local.py
backend/app/tasks/: base.py  celery_app.py  cross_source.py  document_processing.py  health.py  needs.py  retry.py
backend/app/verification/: confidence.py  dti.py  engine.py  facts.py  finding_guidance.py  ltv.py  max_loan.py  mortgage_insurance.py  registry.py  reserves.py  self_employed.py
backend/tests/: conftest.py  test_config.py  test_health.py  test_main.py
backend/tests/ai/: test_bank_statement_extraction.py  test_classification.py  test_classification_prompt.py  test_client.py  test_cost.py  test_cross_source.py  test_divorce_decree_extraction.py  test_drivers_license_extraction.py  test_form_1099_extraction.py  test_generic_analyzer.py  (+16 more)
(+495 files in other folders)
