[project]
name = "mortgageboss-ai-backend"
version = "0.1.0"
description = "Backend for mortgageboss-ai loan processing assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "pypdf>=5.1.0",
    "email-validator>=2.2.0",
    "structlog>=24.4.0",
    "cryptography>=48.0.1",
    "bcrypt>=5.0.0",
    "pyjwt>=2.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-passlib",
    "types-python-jose",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length is handled by the formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true  # tighten as the project matures

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Run fixtures and tests on a single session-scoped event loop. The
# session-scoped test_engine, the per-test db_session, and the test bodies all
# touch the same asyncpg connections, which are bound to the loop that created
# them; sharing one loop avoids "attached to a different loop" errors.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]
